crates/serde-feather/tests/ui/variant_duplicate_rename.stderr
error: duplicate serde enum variant attribute `rename`
 --> tests/ui/variant_duplicate_rename.rs:5:31
  |
5 |     #[serde(rename = "first", rename = "second")]
  |                               ^^^^^^^^^^^^^^^^^
